Add more time options

--- a/tasktrackerwebui/templates/input_task.html
+++ b/tasktrackerwebui/templates/input_task.html
@@ -75,6 +75,9 @@
             <option value="weekly">Weekly</option>
             <option value="weekdays">Weekdays</option>
             <option value="biweekly">Biweekly</option>
+            <option value="monthly">On day of month</option>
+            <option value="four_weeks">Every four weeks</option>
+            <option value="once">Once</option>
         </select>
     </p>
     <p><input type="submit" value="Submit"></p>
